# cube-regen

./: .flake8  .gitignore  Makefile  README.md  classification.txt  mkdocs.yml  pyproject.toml
examples/: huggingface_example.py  inference.ipynb  load.ipynb  local_config.json  train.ipynb  vis.ipynb
images/: 128.tldr
regen/: classification.py  dataset.py  model.py  trainer.py  utils.py
scripts/: inference.py  train.py  train_modal.py
