# https://godatadriven.com/blog/minimal-pyproject-toml-example/
# https://peps.python.org/pep-0621/

[project]
name = "regen"
requires-python = ">=3.8"
readme = "README.md"
version = "0.0.0"
authors = [
    { name = "Shyam Sudhakaran", email = "shyamsnair@protonmail.com" }
]
dependencies = [
    "torch",
    "numpy",
    "huggingface_hub>=0.16.0",
]
[project.optional-dependencies]
dev = [
]
[tool.setuptools.packages.find]
where = ["."]
include = ["regen"]
exclude = []
namespaces = false
